6269036 cmd/xstr and gcc don't get along 6272021 gcc and cmd/mt don't get along 6273910 gcc and cmd/tabs don't get along 6273935 gcc and cmd/tip don't get along 6273951 gcc and cmd/users don't get along

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -245,14 +245,17 @@ COMMON_SUBDIRS = \
 	cmd/sync \
 	cmd/syseventadm \
 	cmd/syseventd \
+	cmd/tabs \
 	cmd/tail \
 	cmd/tee \
 	cmd/th_tools \
+	cmd/tip \
 	cmd/touch \
 	cmd/tr \
 	cmd/truss \
 	cmd/tty \
 	cmd/uadmin \
+	cmd/users \
 	cmd/utmp_update \
 	cmd/utmpd \
 	cmd/valtools \
@@ -263,6 +266,7 @@ COMMON_SUBDIRS = \
 	cmd/whodo \
 	cmd/wracct \
 	cmd/xargs \
+	cmd/xstr \
 	cmd/yes \
 	cmd/yppasswd \
 	cmd/zdump \
