6237094 perl build should honor $(CC) 6272179 relocation processing should be bypassed when building libgenunix et al 6307198 Need to pass in -save_args option when the new gcc is available 6310495 gcc and sun4 rootnex don't get along 6310534 new gcc options should be used to build ON 6319181 cw needs -xbuiltin support

--- a/usr/src/Makefile.master.64
+++ b/usr/src/Makefile.master.64
@@ -71,6 +71,9 @@ AS=		$($(MACH64)_AS)
 LD=		$($(MACH64)_LD)
 LINT=		$($(MACH64)_LINT)
 
+REAL_CC=	$(CW_CC_CMD:sh)
+REAL_CCC=	$(CW_CCC_CMD:sh)
+
 BUILD.SO=	$(CC) $(CFLAGS) -o $@ $(GSHARED) $(DYNFLAGS) \
 		$(PICS) -L $(ROOTLIBDIR64) $(LDLIBS)
 
