--- a/usr/src/cmd/mdb/sparc/Makefile.sparcv7
+++ b/usr/src/cmd/mdb/sparc/Makefile.sparcv7
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -34,7 +33,7 @@ $$(ROOTMOD)/%: dmod/%
 	$(INS.file)
 
 CFLAGS += $(CTF_FLAGS) $(CCVERBOSE) -xstrconst
-CTFSTABSCFLAGS = $(CFLAGS)
+CTFSTABSCFLAGS = $(CFLAGS) $(CALLSYMS)
 LINTFLAGS += -u -erroff=E_BAD_FORMAT_STR2,E_BAD_FORMAT_ARG_TYPE2
 
 LFLAGS = -t -v
