--- a/usr/src/cmd/mdb/sparc/Makefile.sparcv9
+++ b/usr/src/cmd/mdb/sparc/Makefile.sparcv9
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -36,7 +35,7 @@ ROOTKMOD = $(ROOT)/kernel/kmdb$(MACHMODDIR)
 CFLAGS = $(CTF_FLAGS) $(XSTRCONST)
 CFLAGS64 += $(CTF_FLAGS) $(XSTRCONST)
 CPPFLAGS += -D_ELF64
-CTFSTABSCFLAGS = $(CFLAGS64)
+CTFSTABSCFLAGS = $(CFLAGS64) $(CALLSYMS)
 
 LINTTAGS1 = E_BAD_FORMAT_STR2,E_INCONS_ARG_DECL2,E_INCONS_VAL_TYPE_DECL2
 LINTTAGS2 = E_BAD_FORMAT_ARG_TYPE2
