--- a/usr/src/cmd/perl/5.8.4/Makefile
+++ b/usr/src/cmd/perl/5.8.4/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,11 +18,12 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 #
@@ -54,6 +54,10 @@ clobber := TARGET = clobber
 clean	:= TARGET = clean
 test	:= TARGET = test
 
+# Compiler replacement rules
+SED_CC		= -e "s!'cc'!'$(CC)'!"
+SED_CC_E	= -e "s!'cc -E'!'$(REAL_CC) -E'!"
+
 # distrib holds the perl source, contrib holds the SMI modules.
 all clean test: configure FRC
 	@ cd distrib; pwd; $(KEEP_STATE_OFF); $(MAKE) $(TARGET)
@@ -67,7 +71,7 @@ configure: $(DISTRIB_CONFIG_FILES) $(GEN_MAKEFILES) get_no_keywords
 
 # Modify config.sh to refer to the compiler used for the build.
 distrib/config.sh: $(MACH)/config.sh
-	$(SED) -e "s!'cc!'$(SPRO_VROOT)/bin/cc!" $(MACH)/config.sh > $@
+	$(SED)	$(SED_CC) $(SED_CC_E) $(MACH)/config.sh > $@
 
 Makefile.perlcfg: extract_config $(MACH)/config.sh
 	./extract_config $(MACH)/config.sh > Makefile.perlcfg
