--- a/usr/src/uts/Makefile.uts
+++ b/usr/src/uts/Makefile.uts
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,11 +18,14 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
+#
+
 #
 #	This Makefile contains the common targets and definitions for
 #	all kernels. It is to be included in the Makefiles for specific
@@ -441,6 +443,22 @@ CTFMERGE_COPY_CTF_DATA		= \
 # put them in an archive.  The genunix ctfmerge then includes this archive.
 #
 IPCTF			= $(IPDRV_DIR)/$(OBJS_DIR)/ipctf.a
+
+#
+# Rule for building fake shared libraries used for symbol resolution
+# when building other modules.  -znoreloc is needed here to avoid
+# tripping over code that isn't really suitable for shared libraries.
+#
+BUILD.SO		= \
+	$(LD) -o $@ $(GSHARED) $(ZNORELOC) -h $(SONAME)
+
+#
+# SONAME defaults for common fake shared libraries.
+#
+$(LIBGEN)		:= SONAME = $(MODULE)
+$(PLATLIB)		:= SONAME = misc/platmod
+$(CPULIB)		:= SONAME = 'cpu/$$CPU'
+$(DTRACESTUBS)		:= SONAME = dtracestubs
 
 #
 #	Installation directories
