--- a/usr/src/uts/sparc/krtld/Makefile
+++ b/usr/src/uts/sparc/krtld/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -83,7 +82,8 @@ LDFLAGS		= -e _kobj_boot -M$(MAPFILE) \
 # the changed symbols) unless we tell it to use fuzzy matching.
 CTFMRGFLAGS	= -f
 
-$(PICS)		:= CFLAGS += -K pic
+$(PICS)		:= CFLAGS += -K pic -_gcc=-fno-constant-pools \
+		-_gcc=-fno-jump-tables
 
 #
 # krtld has its own private copies of these functions and objects
