--- a/usr/src/uts/sun4u/serengeti/cheetahplus/Makefile
+++ b/usr/src/uts/sun4u/serengeti/cheetahplus/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,16 +18,17 @@
 #
 # CDDL HEADER END
 #
+
 #
-# uts/sun4u/serengeti/cheetahplus/Makefile
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#pragma	ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
+
 #
 #	This makefile drives the production of the Serengeti
 #	UltraSPARC driver module.
-#
 #
 
 #
@@ -113,7 +113,7 @@ clean.lint:	$(CLEAN_LINT_DEPS)
 install:	$(INSTALL_DEPS)
 
 $(CPULIB):	$(BINARY)
-	$(LD) -o $(CPULIB) -G $(BINARY)
+	$(BUILD.SO) $(BINARY)
 
 $(SYM_MOD):	$(UNIX_O) $(CPULIB)
 	@echo "resolving symbols against unix.o"
