--- a/usr/src/uts/sun4u/serengeti/unix/Makefile
+++ b/usr/src/uts/sun4u/serengeti/unix/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,11 +18,14 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
+
 #
 #	This makefile drives the production of unix (and unix.o).
 #
@@ -169,7 +171,7 @@ $(PLATLIB):
 #	CPU_OBJ is defined to allow for building multiple CPU_OBJ's
 #
 $(CPULIB):	$(CPU_OBJ)
-	$(LD) -o $@ -G -h 'cpu/$$CPU' $(CPU_OBJ)
+	$(BUILD.SO) $(CPU_OBJ)
 
 #
 #	The global lint target builds the kernel lint library (llib-lunix.ln)
