--- a/usr/src/uts/sun4v/ontario/platmod/Makefile
+++ b/usr/src/uts/sun4v/ontario/platmod/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -18,11 +17,15 @@
 # information: Portions Copyright [yyyy] [name of copyright owner]
 #
 # CDDL HEADER END
-# uts/sun4v/ontario/platmod/Makefile
+#
+
+#
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
+
 #
 #	This makefile drives the production of the sun4v ontario default 
 #	platform module.
@@ -101,7 +104,7 @@ check:
 LINT_LIB_DIR	=$(ONTARIO_LINT_LIB_DIR)
 
 $(PLATLIB):	$(BINARY)
-	$(LD) -o $(PLATLIB) -G $(BINARY)
+	$(BUILD.SO) $(BINARY)
 
 $(SYM_MOD):	$(UNIX_O) $(PLATLIB)
 	@echo "resolving symbols against unix.o"
