--- a/usr/src/uts/sun4v/platmod/Makefile
+++ b/usr/src/uts/sun4v/platmod/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,12 +18,14 @@
 #
 # CDDL HEADER END
 #
+
 #
-# uts/sun4v/platmod/Makefile
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
+
 #
 #	This makefile drives the production of the sun4v default platform module.
 #
@@ -90,7 +91,7 @@ clean.lint:	$(CLEAN_LINT_DEPS)
 install:	$(INSTALL_DEPS)
 
 $(PLATLIB):	$(BINARY)
-	$(LD) -o $(PLATLIB) -G $(BINARY) -h misc/platmod
+	$(BUILD.SO) $(BINARY)
 
 #
 #	Include common targets.
