PSARC 2005/465 FMA for UltraSPARC-T1 CPU/Memory 6323532 enhance C-based diagnosis engine for Niagara Memory diagnosis 6322749 fmstat output garbled after replacement of faulty DIMM 6326958 workaround for hv/vbsc CE classification bug(s)

--- a/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/cpumem-diagnosis.conf
+++ b/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/cpumem-diagnosis.conf
@@ -25,6 +25,44 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = etm cpumem-diagnosis
+#
+# cpumem-diagnosis
+#
+setprop icache_n 2
+setprop icache_t 168h
 
-include ../../Makefile.subdirs
+setprop dcache_n 2
+setprop dcache_t 168h
+
+setprop pcache_n 2
+setprop pcache_t 168h
+
+setprop itlb_n 2
+setprop itlb_t 168h
+
+setprop dtlb_n 2
+setprop dtlb_t 168h
+
+setprop l2tag_n 3
+setprop l2tag_t 12h
+
+setprop l2data_n 3
+setprop l2data_t 12h
+
+setprop l3tag_n 3
+setprop l3tag_t 12h
+
+setprop l3data_n 3
+setprop l3data_t 12h
+
+setprop ce_n 2
+setprop ce_t 72h
+
+#
+# The parameter value below is an integer, measured in thousandths of a percent
+# of the number of system pages.  A value of 100 means 0.1% of system memory.
+# The value given cannot exceed 100000, or 100%.
+#
+setprop thresh_tpct_sysmem 100
+
+dictionary SUN4U
