--- a/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/Makefile.cpumem
+++ b/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/Makefile.cpumem
@@ -20,49 +20,52 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-#
-# cpumem-diagnosis
-#
-setprop icache_n 2
-setprop icache_t 168h
+MODULE = cpumem-diagnosis
+CLASS = arch
+SUN4DIR = ../../sun4/$(MODULE)
+SRCS = \
+	cmd_bank.c \
+	cmd_cpu.c \
+	cmd_cpuerr.c \
+	cmd_dimm.c \
+	cmd_ecache.c \
+	cmd_fmri.c \
+	cmd_list.c \
+	cmd_main.c \
+	cmd_mem.c \
+	cmd_memerr.c \
+	cmd_memerr_arch.c \
+	cmd_page.c \
+	cmd_pageerr.c \
+	cmd_state.c \
+	cmd_util.c
 
-setprop dcache_n 2
-setprop dcache_t 168h
+include ../../Makefile.plugin
 
-setprop pcache_n 2
-setprop pcache_t 168h
+CMD_VERSION = "1.5"
 
-setprop itlb_n 2
-setprop itlb_t 168h
+INCDIRS += \
+	. \
+	$(SRC)/uts/sun4 \
+	$(SRC)/uts/sparc/v9 \
+	$(SUN4DIR)
 
-setprop dtlb_n 2
-setprop dtlb_t 168h
+CPPFLAGS += $(INCDIRS:%=-I%) -DCMD_VERSION='$(CMD_VERSION)' -D$(ARCH)
 
-setprop l2tag_n 3
-setprop l2tag_t 12h
+LDFLAGS += -lkstat
 
-setprop l2data_n 3
-setprop l2data_t 12h
+%.o: $(SUN4DIR)/%.c
+	$(COMPILE.c) -o $@ $<
+	$(CTFCONVERT_O)
 
-setprop l3tag_n 3
-setprop l3tag_t 12h
+%.ln: $(SUN4DIR)/%.c
+	$(LINT.c) -c $<
 
-setprop l3data_n 3
-setprop l3data_t 12h
+$(CONF): $(SUN4DIR)/$(CONF)
+	$(RM) $(CONF); $(CP) $(SUN4DIR)/$@ $@
 
-setprop ce_n 2
-setprop ce_t 72h
-
-#
-# The parameter value below is an integer, measured in thousandths of a percent
-# of the number of system pages.  A value of 100 means 0.1% of system memory.
-# The value given cannot exceed 100000, or 100%.
-#
-setprop thresh_tpct_sysmem 100
-
-dictionary SUN4U
