6311268 picl has no FRU data for Power Supply 6330081 missing unit addresses in frutree device paths

--- a/usr/src/cmd/picl/plugins/sun4u/chicago/frudata/libpiclfrudata.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/chicago/frudata/libpiclfrudata.conf
@@ -61,3 +61,6 @@ PROP FRUDevicePath string r 0 "/devices/ebus@1f,464000/i2c@3,80/sas-backplane-fr
  
 name:/platform/ebus@1f,464000/i2c@3,80/front-io-fru-prom
 PROP FRUDevicePath string r 0 "/devices/ebus@1f,464000/i2c@3,80/front-io-fru-prom@0,a4:front-io-fru-prom"
+
+name:/platform/ebus@1f,464000/i2c@3,80/psu-fru-prom
+PROP FRUDevicePath string r 0 "/devices/ebus@1f,464000/i2c@3,80/psu-fru-prom@0,ae:psu-fru-prom"
