6324793 pci_autoconfig: duplicate devinfo nodes appear for CardBus bridge in Tecra M3 (fix lint) 6326272 power button doesn't shut down acpi systems (fix lint)

--- a/usr/src/uts/i86pc/power/Makefile
+++ b/usr/src/uts/i86pc/power/Makefile
@@ -66,6 +66,7 @@ CFLAGS += $(CCVERBOSE)
 # ACPI power button
 #
 CFLAGS += -DACPI_POWER_BUTTON
+LINTFLAGS += -DACPI_POWER_BUTTON
 
 LDFLAGS += -dy -N misc/acpica
 
