--- a/usr/src/uts/sparc/pfil/Makefile
+++ b/usr/src/uts/sparc/pfil/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -65,7 +65,7 @@ INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOTLINK) $(ROOT_CONFFILE)
 #
 MINOR=    echo $(RELEASE) | cut -d. -f2
 CFLAGS += $(CCVERBOSE)
-CPPFLAGS +=  -DSUNDDI -DSOLARIS2=$(MINOR:sh) -DIRE_ILL_CN -DSOLARIS
+CPPFLAGS +=  -DSUNDDI -DSOLARIS2=$(MINOR:sh) -DIRE_ILL_CN -DSOLARIS -DUSE_INET6
 LDFLAGS += -dy -Ndrv/ip
 
 #
