PSARC 2005/572 PKCS#11 v2.20 4920408 PKCS#11 v2.20 support for the Crypto Framework 6287425 residual bzero's in hmac part of sha2 6287428 add sha2 to the i.kcfconfbase upgrade script

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -959,7 +959,7 @@ AESPROV_OBJS +=	aes.o aes_cbc_crypt.o aes_impl.o
 
 ARCFOURPROV_OBJS += arcfour.o arcfour_crypt.o
 
-BLOWFISHPROV_OBJS += blowfish.o blowfish_impl.o 
+BLOWFISHPROV_OBJS += blowfish.o blowfish_impl.o blowfish_cbc_crypt.o
 
 COMMON_RSAPROV_OBJS += rsa.o bignumimpl.o rsa_impl.o
 
