--- a/usr/src/uts/intel/rsa/Makefile
+++ b/usr/src/uts/intel/rsa/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -67,7 +67,7 @@ INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 #
 # Linkage dependencies
 #
-LDFLAGS += -dy -Ncrypto/md5
+LDFLAGS += -dy -Ncrypto/md5 -Ncrypto/sha2
 
 CPPFLAGS	+= -I$(COM1_DIR) -I$(COM2_DIR)
 
