6199500 IP Filter's ipmon should be run with absolute path name 6264454 "make all" fails in usr/src/cmd/ipf 6267778 reference count assertion failure in ip_ire.c 6330610 parsing error with ipnat and extended port matching 6332961 network/ipfilter ipfilter test tproxy_3h_01_rdr causes snv_22 to hang

--- a/usr/src/cmd/ipf/svc/Makefile
+++ b/usr/src/cmd/ipf/svc/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -14,6 +14,8 @@ ROOTMANIFESTDIR=	$(ROOTSVCNETWORK)
 $(ROOTMANIFEST)		:= FILEMODE= 444
 
 include $(SRC)/cmd/Makefile.targ
+
+all: $(OBJS)
 
 $(ROOTMANIFESTDIR)/%: %
 		$(INS.file)
