--- a/usr/src/uts/sun4u/Makefile.sun4u
+++ b/usr/src/uts/sun4u/Makefile.sun4u
@@ -98,6 +98,7 @@ IMPLEMENTATIONS		+= cherrystone .WAIT
 IMPLEMENTATIONS		+= fjlite .WAIT
 IMPLEMENTATIONS		+= lw2plus .WAIT
 IMPLEMENTATIONS		+= snowbird .WAIT
+IMPLEMENTATIONS		+= schumacher .WAIT
 IMPLEMENTATIONS		+= blade .WAIT
 IMPLEMENTATIONS		+= chicago
 
