--- a/usr/src/uts/sun4u/schumacher/Makefile.rules
+++ b/usr/src/uts/sun4u/schumacher/Makefile.rules
@@ -19,38 +19,34 @@
 #
 # CDDL HEADER END
 #
-#
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+#pragma ident	"%Z%%M%	%I%	%E% SMI"
 #
-# cmd/picl/plugins/sun4u/Makefile
+#	This Makefile defines the build rules for the directory
+#	uts/sun4u/schumacher.
+#
+#	The following two-level ordering must be maintained in this file.
+#	  Lines are sorted first in order of decreasing specificity based on
+#	  the first directory component.  That is, sun4u rules come before
+#	  sparc rules come before common rules.
+#
+#	  Lines whose initial directory components are equal are sorted
+#	  alphabetically by the remaining components.
+
+#
+#	Section 1a: C object build rules
 #
 
-SUBDIRS= lib .WAIT envmon .WAIT \
-	frudata grover excalibur psvc littleneck daktari \
-	cherrystone lw8 lw2plus taco enchilada chicago blade mpxu ents \
-	chalupa silverstone sebring snowbird schumacher .WAIT
+$(OBJS_DIR)/%.o:	$(UTSBASE)/sun4u/schumacher/os/%.c
+	$(COMPILE.c) -o $@ $<
+	$(CTFCONVERT_O)
 
-MSGSUBDIRS=	lib frudata grover excalibur psvc littleneck daktari \
-	cherrystone lw8 lw2plus taco enchilada chicago blade envmon mpxu ents \
-	silverstone sebring snowbird schumacher
+#
+#	Section 1b: Lint `object' build rules
+#
 
-all :=		TARGET= all
-install :=	TARGET= install
-clean :=	TARGET= clean
-clobber :=	TARGET= clobber
-lint :=		TARGET= lint
-_msg :=		TARGET= _msg
+$(LINTS_DIR)/%.ln:	$(UTSBASE)/sun4u/schumacher/os/%.c
+	@($(LHEAD) $(LINT.c) $< $(LTAIL))
 
-.KEEP_STATE:
-
-all install clean clobber lint : $(SUBDIRS)
-
-_msg:	$(MSGSUBDIRS)
-
-$(SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-FRC:
