--- a/usr/src/uts/sun4u/schumacher/Makefile.files
+++ b/usr/src/uts/sun4u/schumacher/Makefile.files
@@ -19,37 +19,24 @@
 #
 # CDDL HEADER END
 #
-#
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-#
+# uts/sun4u/schumacher/Makefile.files
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# lib/libc_psr/spec/sun4u-us3/Makefile.links
-
-include $(SRC)/Makefile.psm
-
-MODULE = abi
+#ident	"%Z%%M%	%I%	%E% SMI"
+#
+#	This Makefile defines all file modules for the directory
+#	uts/sun4u/schumacher and it's children. These are the source files
+#	which are sun4u "implementation architecture" dependent.
+#
 
 #
-# links in /usr/platform
+#	object lists
 #
-LINKED_PLATFORMS	= SUNW,Sun-Blade-1000
-LINKED_PLATFORMS	+= SUNW,Sun-Blade-1500
-LINKED_PLATFORMS	+= SUNW,Sun-Blade-2500
-LINKED_PLATFORMS	+= SUNW,A70
-LINKED_PLATFORMS	+= SUNW,Sun-Fire
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-V240
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-V250
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-V440
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-280R
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-15000
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-880
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-480R
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-V890
-LINKED_PLATFORMS	+= SUNW,Sun-Fire-V490
-LINKED_PLATFORMS	+= SUNW,Netra-T12
-LINKED_PLATFORMS	+= SUNW,Netra-T4
-LINKED_PLATFORMS	+= SUNW,Netra-CP3010
+# Schumacher specific driver module
+#
 
-include $(SRC)/lib/libc_psr/spec/Makefile.com
+#
+# Miscellaneous
+#
+INC_PATH	+= -I$(UTSBASE)/sun4u/schumacher
