6330103 grub savedefault command fails 6336823 realmode package SUNWradpu320 refuses to go away

--- a/usr/src/grub/Makefile
+++ b/usr/src/grub/Makefile
@@ -20,11 +20,15 @@ SUBDIRS	= $(GRUB)
 
 SPLASH_IMAGE = splash.xpm.gz
 GRUB_MENU = menu.lst
+GRUB_DEFAULT = default
 INSTALL_MENU = install_menu
 
 INST_TARGETS = $(ROOT_BOOT_GRUB)/$(SPLASH_IMAGE)
 INST_TARGETS += $(ROOT_BOOT_GRUB)/$(GRUB_MENU)
 INST_TARGETS += $(ROOT_BOOT_GRUB)/$(INSTALL_MENU)
+INST_TARGETS += $(ROOT_BOOT_GRUB)/$(GRUB_DEFAULT)
+
+$(ROOT_BOOT_GRUB)/$(GRUB_DEFAULT)   := FILEMODE = 444
 
 all: $(SUBDIRS)
 
