6325559 niagara libc_psr does not have a capabilities section

--- a/usr/src/lib/libc_psr/sun4v_hwcap1/sparc/Makefile
+++ b/usr/src/lib/libc_psr/sun4v_hwcap1/sparc/Makefile
@@ -38,7 +38,7 @@ include ../Makefile.com
 MAPDIR=		../../spec/$(ALT_PLAT)/$(MACH)
 MAPFILE=	$(MAPDIR)/mapfile-$(MACH)
 
-MAPFILES=	$(MAPFILE) $(MAPFILE-FLTR)
+MAPFILES=	$(MAPFILE) $(MAPFILE-FLTR) $(HWCAP_MAPFILE)
 MAPOPTS=	$(MAPFILES:%=-M %)
 DYNFLAGS +=	$(MAPOPTS)
 CLOBBERFILES +=	$(MAPFILE)
