--- a/usr/src/lib/libc_psr/sun4v_hwcap1/sparcv9/Makefile
+++ b/usr/src/lib/libc_psr/sun4v_hwcap1/sparcv9/Makefile
@@ -39,7 +39,7 @@ include ../Makefile.com
 MAPDIR=		../../spec/$(ALT_PLAT)/$(MACH64)
 MAPFILE=	$(MAPDIR)/mapfile-$(MACH64)
 
-MAPFILES=	$(MAPFILE) $(MAPFILE-FLTR)
+MAPFILES=	$(MAPFILE) $(MAPFILE-FLTR) $(HWCAP_MAPFILE)
 MAPOPTS=	$(MAPFILES:%=-M %)
 DYNFLAGS +=	$(MAPOPTS)
 CLOBBERFILES +=	$(MAPFILE)
