6310420 gcc and zuluvm don't get along 6310466 gcc wants inline SPARC assembly in the kernel

--- a/usr/src/uts/sparc/Makefile
+++ b/usr/src/uts/sparc/Makefile
@@ -88,6 +88,7 @@ $(SVVS) $(XMODS):	FRC
 	fi
 
 install_h check:	FRC
+	@cd asm; pwd; $(MAKE) $(TARGET)
 	@cd sys; pwd; $(MAKE) $(TARGET)
 	@cd v7/sys; pwd; $(MAKE) $(TARGET)
 	@cd v9/sys; pwd; $(MAKE) $(TARGET)
