--- a/usr/src/uts/sparc/Makefile.sparc
+++ b/usr/src/uts/sparc/Makefile.sparc
@@ -115,7 +115,7 @@ CFLAGS		+= $(XARCH)
 CFLAGS		+= $(COPTIMIZE)
 CFLAGS		+= $(EXTRA_CFLAGS)
 CFLAGS		+= $(XAOPT)
-CFLAGS		+= $(INLINES)
+CFLAGS		+= $(INLINES) -D_ASM_INLINES
 CFLAGS		+= $(CCMODE)
 CFLAGS		+= $(SPACEFLAG)
 CFLAGS		+= $(CERRWARN)
