6272693 gcc and cmd/refer don't get along

--- a/usr/src/cmd/refer/Makefile
+++ b/usr/src/cmd/refer/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -37,7 +37,7 @@ PROG =		$(PROG1) $(PROG2)
 
 OBJS =		addbib.o deliv2.o glue1.o glue2.o glue3.o glue4.o	\
 		glue5.o hunt1.o hunt2.o hunt3.o hunt5.o hunt6.o		\
-		hunt7.o hunt8.o hunt9.o inv1.o inv2.o inv3.o		\
+		hunt7.o hunt8.o inv1.o inv2.o inv3.o		\
 		inv5.o inv6.o lookbib.o mkey1.o mkey2.o mkey3.o		\
 		refer..o refer0.o refer1.o refer2.o refer3.o refer4.o	\
 		refer5.o refer6.o refer7.o refer8.o shell.o sortbib.o	\
@@ -75,12 +75,12 @@ clobber:=	TARGET=	clobber
 mkey:=		POBJS=  mkey1.o mkey2.o mkey3.o deliv2.o
 inv:=		POBJS= inv1.o inv2.o inv3.o inv5.o inv6.o deliv2.o
 hunt:=		POBJS= hunt1.o hunt2.o hunt3.o hunt5.o hunt6.o		\
-			hunt7.o glue5.o refer3.o hunt9.o shell.o	\
+			hunt7.o glue5.o refer3.o shell.o	\
 			deliv2.o hunt8.o glue4.o tick.o
 refer:=		POBJS= glue1.o refer1.o refer2.o refer4.o refer5.o	\
 			refer6.o mkey3.o refer7.o refer8.o hunt2.o	\
 			hunt3.o deliv2.o hunt5.o hunt6.o hunt8.o	\
-			glue3.o hunt7.o hunt9.o glue2.o glue4.o		\
+			glue3.o hunt7.o glue2.o glue4.o		\
 			glue5.o refer0.o shell.o
 addbib:=	POBJS= addbib.o
 lookbib:=	POBJS= lookbib.o
@@ -122,12 +122,12 @@ lint:
 	$(LINT.c) mkey1.c mkey2.c mkey3.c deliv2.c $(LDLIBS)
 	$(LINT.c) inv1.c inv2.c inv3.c inv5.c inv6.c deliv2.c $(LDLIBS)
 	$(LINT.c) hunt1.c hunt2.c hunt3.c hunt5.c hunt6.c	\
-		hunt7.c glue5.c refer3.c hunt9.c shell.c	\
+		hunt7.c glue5.c refer3.c shell.c	\
 		deliv2.c hunt8.c glue4.c tick.c $(LDLIBS)
 	$(LINT.c) glue1.c refer1.c refer2.c refer4.c refer5.c	\
 		refer6.c mkey3.c refer7.c refer8.c hunt2.c	\
 		hunt3.c deliv2.c hunt5.c hunt6.c hunt8.c	\
-		glue3.c hunt7.c hunt9.c glue2.c glue4.c		\
+		glue3.c hunt7.c glue2.c glue4.c		\
 		glue5.c refer0.c shell.c $(LDLIBS)
 	$(LINT.c) addbib.c $(LDLIBS)
 	$(LINT.c) lookbib.c $(LDLIBS)
