6272066 gcc and cmd/oawk don't get along 6273850 gcc and cmd/setpgrp don't get along 6273941 gcc and cmd/ul don't get along

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -229,6 +229,7 @@ COMMON_SUBDIRS = \
 	cmd/rpcsvc/rpc.bootparamd \
 	cmd/runat \
 	cmd/sed_xpg4 \
+	cmd/setpgrp \
 	cmd/smartcard \
 	cmd/smbios \
 	cmd/smserverd \
@@ -256,6 +257,7 @@ COMMON_SUBDIRS = \
 	cmd/truss \
 	cmd/tty \
 	cmd/uadmin \
+	cmd/ul \
 	cmd/users \
 	cmd/utmp_update \
 	cmd/utmpd \
